better organized routes and swagger docs
