# middleware/validation.js
@@ -1,4 +1,5 @@
 const validator = require('../helper/validate');
+
 const validateRoute = async (req, res, next) => {
     const validationRule = {
         "name": "required|string",
@@ -7,7 +8,29 @@ const validateRoute = async (req, res, next) => {
         "holdColor": "string",
         "startDate": "required|date",
         "completionDate": "date",
-        "attempts": "integer"
+        "attempts": "integer",
+        "gym_id": "required|string"
+    };
+
+    await validator(req.body, validationRule, {}, (err, status) => {
+        if (!status) {
+            res.status(412)
+                .send({
+                    success: false,
+                    message: 'Validation failed',
+                    data: err
+                });
+        } else {
+            next();
+        }
+    }).catch( err => console.log(err))
+}
+
+const validateGym = async (req, res, next) => {
+    const validationRule = {
+        "name": "required|string",
+        "address": "required|string",
+        "phone": "string"
     };
 
     await validator(req.body, validationRule, {}, (err, status) => {
@@ -24,5 +47,6 @@ const validateRoute = async (req, res, next) => {
     }).catch( err => console.log(err))
 }
 module.exports = {
-    validateRoute
+    validateRoute,
+    validateGym
 };
